# javadoc2adoc

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  default.nix  docker-aarch64.nix  docker.nix  package.nix  shell.nix
javadoc2adoc/: Cargo.toml
javadoc2adoc/src/: classdoc.rs  main.rs  output.rs  test.java
javadoc2adoc/src/javadoc/: class.rs  comment.rs  constructor.rs  field.rs  interface.rs  method.rs  mod.rs
javadoc2adoc_macros/: Cargo.toml
javadoc2adoc_macros/src/: lib.rs
javadoc2adoc_macros/tests/: test.rs
javadoc2adoc_macros/tests/fail/: enum.rs  enum.stderr
javadoc2adoc_macros/tests/pass/: basic.rs
javadoc2adoc_types/: Cargo.toml
javadoc2adoc_types/src/: lib.rs
locales/: adoc.yml
src/: classdoc.rs  config.rs  main.rs  output.rs  parser.rs
src/javadoc/: class.rs  comment.rs  constructor.rs  field.rs  interface.rs  method.rs  mod.rs
