[package]
name = "javadoc2adoc"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
glob = "0.3.2"
javadoc2adoc_macros = { version = "0.1.0", path = "../javadoc2adoc_macros" }
macro_rules_attribute = "0.2.0"
rust-i18n = "3.1.3"
smol = "2.0.2"
smol-macros = "0.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.2"
tree-sitter-java = "0.23.5"
